# cookiecutter-uv-dataeng

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
cookiecutter_uv_dataeng/: cli.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py  utils.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/include/: foo.py
{{cookiecutter.project_name}}/tests/: test_foo.py
